unpackaged/main/default/objects/WOAHens__c/WOAHens__c.object-meta.xml
<CustomObject>
    <label>WOAHens</label>
    <nameField>
        <displayFormat>WH-{0000}</displayFormat>
        <label>WOAHens ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WOAHens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>