unpackaged/main/default/objects/WOAHens__c/fields/Agressive_behaviour_observed__c.field-meta.xml
<CustomField>
    <fullName>Agressive_behaviour_observed__c</fullName>
    <label>Agressive behaviour observed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>