unpackaged/main/default/objects/WOAHens__c/fields/Antagonistic_incidents_observed_or_Heard__c.field-meta.xml
<CustomField>
    <fullName>Antagonistic_incidents_observed_or_Heard__c</fullName>
    <label>Antagonistic incidents observed or Heard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>