unpackaged/main/default/objects/WOAHens__c/fields/Back_Vent_feather_loss_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Back_Vent_feather_loss_Score_2__c</fullName>
    <label>Back &amp; Vent feather loss: Score 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>