unpackaged/main/default/objects/WOAHens__c/fields/Beak_trimming__c.field-meta.xml
<CustomField>
    <fullName>Beak_trimming__c</fullName>
    <label>Beak trimming</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>not beak trimmed</fullName>
            </value>
            <value>
                <fullName>beak trimmed before 10 days</fullName>
            </value>
            <value>
                <fullName>beak trimmed as an emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>