unpackaged/main/default/objects/WOAHens__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <label>Breed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amberlink / Silverlink</fullName>
            </value>
            <value>
                <fullName>Bovans Brown (previously Goldline)</fullName>
            </value>
            <value>
                <fullName>British Blacktail</fullName>
            </value>
            <value>
                <fullName>Clarence Court Burford Brown</fullName>
            </value>
            <value>
                <fullName>Clarence Court Cotswold Legbars</fullName>
            </value>
            <value>
                <fullName>Dekalb White</fullName>
            </value>
            <value>
                <fullName>Dual Purpose Breeds</fullName>
            </value>
            <value>
                <fullName>H&amp;N Brown Nick</fullName>
            </value>
            <value>
                <fullName>Hyline Brown</fullName>
            </value>
            <value>
                <fullName>Hyline Brown Plus</fullName>
            </value>
            <value>
                <fullName>Hyline Silverbrown</fullName>
            </value>
            <value>
                <fullName>Isa Brown</fullName>
            </value>
            <value>
                <fullName>Lohmann Brown Classic</fullName>
            </value>
            <value>
                <fullName>Lohmann Brown Lite</fullName>
            </value>
            <value>
                <fullName>Lohmann Silver</fullName>
            </value>
            <value>
                <fullName>Lohmann White Breed / LSL / LSL Lite</fullName>
            </value>
            <value>
                <fullName>Novogen Brown</fullName>
            </value>
            <value>
                <fullName>Shaver Brown</fullName>
            </value>
            <value>
                <fullName>Warren</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>not recorded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>