unpackaged/main/default/objects/WOAHens__c/fields/Dirtiness_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Dirtiness_Score_2__c</fullName>
    <label>Dirtiness Score 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>