unpackaged/main/default/objects/WOAHens__c/fields/Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Enrichment__c</fullName>
    <label>Enrichment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnvEnrichment</valueSetName>
    </valueSet>
</CustomField>