unpackaged/main/default/objects/WOAHens__c/fields/Feather_pecking_observed__c.field-meta.xml
<CustomField>
    <fullName>Feather_pecking_observed__c</fullName>
    <label>Feather pecking observed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>