unpackaged/main/default/objects/WOAHens__c/fields/Featherloss_Scores_Carried_Out_By__c.field-meta.xml
<CustomField>
    <fullName>Featherloss_Scores_Carried_Out_By__c</fullName>
    <label>Featherloss Scores Carried Out By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessor</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>