unpackaged/main/default/objects/WOAHens__c/fields/Flightiness__c.field-meta.xml
<CustomField>
    <fullName>Flightiness__c</fullName>
    <label>Flightiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>calm</fullName>
            </value>
            <value>
                <fullName>cautious</fullName>
            </value>
            <value>
                <fullName>flighty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>