unpackaged/main/default/objects/WOAHens__c/fields/Flock_Age__c.field-meta.xml
<CustomField>
    <fullName>Flock_Age__c</fullName>
    <label>Flock Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>