unpackaged/main/default/objects/WOAHens__c/fields/Flock_Size__c.field-meta.xml
<CustomField>
    <fullName>Flock_Size__c</fullName>
    <label>Flock Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>