unpackaged/main/default/objects/WOAHens__c/fields/Head_Neck_feather_loss_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Head_Neck_feather_loss_Score_2__c</fullName>
    <label>Head &amp; Neck feather loss: Score 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>