unpackaged/main/default/objects/WOAHens__c/fields/Hens_Requiring_Further_Care__c.field-meta.xml
<CustomField>
    <fullName>Hens_Requiring_Further_Care__c</fullName>
    <label>Hens Requiring Further Care</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>