unpackaged/main/default/objects/WOAHens__c/fields/ImprovementMadeDetailsLast12Months__c.field-meta.xml
<CustomField>
    <fullName>ImprovementMadeDetailsLast12Months__c</fullName>
    <label>ImprovementMadeDetailsLast12Months</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>