unpackaged/main/default/objects/WOAHens__c/fields/ImprovementMadeLast12Months__c.field-meta.xml
<CustomField>
    <fullName>ImprovementMadeLast12Months__c</fullName>
    <label>ImprovementMadeLast12Months</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Improvement_Changes</valueSetName>
    </valueSet>
</CustomField>