unpackaged/main/default/objects/WOAHens__c/fields/ImprovementPlannedDetailsNext12Months__c.field-meta.xml
<CustomField>
    <fullName>ImprovementPlannedDetailsNext12Months__c</fullName>
    <label>ImprovementPlannedDetailsNext12Months</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>