unpackaged/main/default/objects/WOAHens__c/fields/Litter_condition_comments__c.field-meta.xml
<CustomField>
    <fullName>Litter_condition_comments__c</fullName>
    <label>Litter condition comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>