unpackaged/main/default/objects/WOAHens__c/fields/Litter_condition_score_1_7__c.field-meta.xml
<CustomField>
    <fullName>Litter_condition_score_1_7__c</fullName>
    <label>Litter condition score (1-7)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>