unpackaged/main/default/objects/WOAHens__c/fields/Mortality_Less_than_40_weeks__c.field-meta.xml
<CustomField>
    <fullName>Mortality_Less_than_40_weeks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortality Less than 40 weeks</label>
    <type>Checkbox</type>
</CustomField>