unpackaged/main/default/objects/WOAHens__c/fields/Mortality_No_Previous_Flock__c.field-meta.xml
<CustomField>
    <fullName>Mortality_No_Previous_Flock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortality No Previous Flock</label>
    <type>Checkbox</type>
</CustomField>