unpackaged/main/default/objects/WOAHens__c/fields/Mortality_to_40_weeks__c.field-meta.xml
<CustomField>
    <fullName>Mortality_to_40_weeks__c</fullName>
    <label>Mortality to 40 weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>