unpackaged/main/default/objects/WOAHens__c/fields/Mortality_to_date__c.field-meta.xml
<CustomField>
    <fullName>Mortality_to_date__c</fullName>
    <label>Mortality to date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>