unpackaged/main/default/objects/WOAHens__c/fields/Mortality_to_date_reasons__c.field-meta.xml
<CustomField>
    <fullName>Mortality_to_date_reasons__c</fullName>
    <label>Mortality to date reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>