unpackaged/main/default/objects/WOAHens__c/fields/Mortality_to_previous_flock__c.field-meta.xml
<CustomField>
    <fullName>Mortality_to_previous_flock__c</fullName>
    <label>Mortality to previous flock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>