unpackaged/main/default/objects/WOAHens__c/fields/NC_Raised_Litter_Into_Multi_tier__c.field-meta.xml
<CustomField>
    <fullName>NC_Raised_Litter_Into_Multi_tier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NC Raised - Litter Into Multi-tier</label>
    <type>Checkbox</type>
</CustomField>