unpackaged/main/default/objects/WOAHens__c/fields/NC_raised_no_destructible_enrichment__c.field-meta.xml
<CustomField>
    <fullName>NC_raised_no_destructible_enrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NC raised - no destructible enrichment</label>
    <type>Checkbox</type>
</CustomField>