unpackaged/main/default/objects/WOAHens__c/fields/New_Unit__c.field-meta.xml
<CustomField>
    <fullName>New_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Unit</label>
    <type>Checkbox</type>
</CustomField>