unpackaged/main/default/objects/WOAHens__c/fields/No_previous_flock_mortality_records__c.field-meta.xml
<CustomField>
    <fullName>No_previous_flock_mortality_records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No previous flock mortality records</label>
    <type>Checkbox</type>
</CustomField>