unpackaged/main/default/objects/WOAHens__c/fields/Other_Breed__c.field-meta.xml
<CustomField>
    <fullName>Other_Breed__c</fullName>
    <label>Other Breed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>