unpackaged/main/default/objects/WOAHens__c/fields/Other_non_completion_reason__c.field-meta.xml
<CustomField>
    <fullName>Other_non_completion_reason__c</fullName>
    <label>Other non completion reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>