unpackaged/main/default/objects/WOAHens__c/fields/Perching__c.field-meta.xml
<CustomField>
    <fullName>Perching__c</fullName>
    <label>Perching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 15 cm raised perching per hen</fullName>
            </value>
            <value>
                <fullName>At least 15 cm raised perching per hen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>