unpackaged/main/default/objects/WOAHens__c/fields/Previous_flock_mortality_reasons__c.field-meta.xml
<CustomField>
    <fullName>Previous_flock_mortality_reasons__c</fullName>
    <label>Previous flock mortality reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>