unpackaged/main/default/objects/WOAHens__c/fields/Production_Type__c.field-meta.xml
<CustomField>
    <fullName>Production_Type__c</fullName>
    <label>Production Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>barn</fullName>
            </value>
            <value>
                <fullName>free-range</fullName>
            </value>
            <value>
                <fullName>organic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>