unpackaged/main/default/objects/WOAHens__c/fields/Range_Stocking_Density__c.field-meta.xml
<CustomField>
    <fullName>Range_Stocking_Density__c</fullName>
    <label>Range Stocking Density</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1000/ha</fullName>
            </value>
            <value>
                <fullName>2000/ha</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>