unpackaged/main/default/objects/WOAHens__c/fields/Rearing_Housing_Type__c.field-meta.xml
<CustomField>
    <fullName>Rearing_Housing_Type__c</fullName>
    <label>Rearing Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>litter</fullName>
            </value>
            <value>
                <fullName>multi-tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>