unpackaged/main/default/objects/WOAHens__c/fields/Reason_for_not_completing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_completing__c</fullName>
    <label>Reason for not completing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>not old enough</fullName>
            </value>
            <value>
                <fullName>no stock on site</fullName>
            </value>
            <value>
                <fullName>non-audit visit</fullName>
            </value>
            <value>
                <fullName>multiple FF licence holder - more than one WOA generated for visit</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>multiple FF license holder - more then one WOA generated for visit</fullName>
                <isActive>false</isActive>
                <label>multiple FF license holder - more then one WOA generated for visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>