unpackaged/main/default/objects/WOAHens__c/fields/Recent_Member_Feather_Scores_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Member_Feather_Scores_Date__c</fullName>
    <label>Recent Member Feather Scores Date</label>
    <type>Date</type>
</CustomField>