unpackaged/main/default/objects/WOAHens__c/fields/Scottish_Irish_or_Northern_Irish_Farms__c.field-meta.xml
<CustomField>
    <fullName>Scottish_Irish_or_Northern_Irish_Farms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scottish, Irish or Northern Irish Farms</label>
    <type>Checkbox</type>
</CustomField>