unpackaged/main/default/objects/WOAHens__c/fields/Severely_beak_trimmed__c.field-meta.xml
<CustomField>
    <fullName>Severely_beak_trimmed__c</fullName>
    <label>Severely beak trimmed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>