unpackaged/main/default/objects/WOAHens__c/fields/Sick_injured_birds_comments__c.field-meta.xml
<CustomField>
    <fullName>Sick_injured_birds_comments__c</fullName>
    <label>Sick injured birds comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>