unpackaged/main/default/objects/WOAHens__c/fields/Total_Birds_On_Farm__c.field-meta.xml
<CustomField>
    <fullName>Total_Birds_On_Farm__c</fullName>
    <label>Total Birds On Farm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>