unpackaged/main/default/objects/WOAHens__c/fields/Type_of_assessment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_assessment__c</fullName>
    <label>Type of assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-site visit - full access to sheds</fullName>
            </value>
            <value>
                <fullName>On-site visit - sheds not walked</fullName>
            </value>
            <value>
                <fullName>DTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>