unpackaged/main/default/objects/WOAHens__c/fields/WOA__c.field-meta.xml
<CustomField>
    <fullName>WOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WOA</label>
    <referenceTo>WOA__c</referenceTo>
    <relationshipLabel>WOAHens</relationshipLabel>
    <relationshipName>WOAHens</relationshipName>
    <type>Lookup</type>
</CustomField>