unpackaged/main/default/objects/WOAHens__c/listViews/test.listView-meta.xml
<ListView>
    <fullName>test</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>test</label>
</ListView>